edited user property and tsconfig

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -5,9 +5,11 @@
   "references": [
     {
       "path": "./tsconfig.app.json",
+      "composite": true
     },
     {
       "path": "./tsconfig.spec.json",
+      "composite": true
     }
   ],
   "compilerOptions": {
