--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^8.8.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "6.11.2"
+    "react-router-dom": "6.11.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
