add Swagger and docs

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "6.11.2",
     "socket.io": "^4.8.1",
     "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
