att header and main

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -11,7 +11,8 @@
   "include": [],
   "references": [
     {
-      "path": "./tsconfig.app.json"
+      "path": "./tsconfig.app.json",
+      "composite": true,
     }
   ],
   "extends": "../../tsconfig.base.json"
